doc: adding further explanation on atk_add_global_event_listener

Clarifying that the atk types should be already registered
before calling this method.

https://bugzilla.gnome.org/show_bug.cgi?id=729922